--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 
 <head>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="css/materialize.css" media="screen,projection">
-    <link rel="stylesheet" href="css/index.css" media="screen,projection">
+    <link rel="stylesheet" href="/css/materialize.css" media="screen,projection">
+    <link rel="stylesheet" href="/css/index.css" media="screen,projection">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <title>No Anxiety Headphone Test | Ax Anxiety</title>
+    <meta name="description" content="Test your headphone's connection without anxiety." />
 </head>
 
 <body class="grey darken-3">
@@ -13,13 +19,18 @@
         <div class="container">
             <div class="row">
                 <div class="col s12">
-                    <h1 class="center white-text">AxAnxiety</h1>
+                    <h1 class="center white-text">Ax/Anxiety</h1>
                 </div>
             </div>
         </div>
     </header>
     <main>
         <div class="container">
+            <div class="row">
+                <div class="col s12 center">
+                    <p class="white-text">The best anxiety free way to test your headphones are connected.</p>
+                </div>
+            </div>
             <div class="row">
                 <div class="col m6 s12 center" style="margin-top: 10px;">
                     <a id="woodBlockBtn" class="waves-effect waves-light btn-large grey darken-2 disabled"><i
@@ -32,13 +43,13 @@
             </div>
         </div>
         <div id="about-modal" class="modal">
-            <div class="modal-content">
+            <div class="modal-content grey lighten-5">
                 <h4>About</h4>
                 <p>Made with &lt;3 and sorcerous powers in Vancouver</p>
                 <p><a href="https://rikimaru55.github.io">Made by Quilo</a></p>
-                <p>Sounds from freesound:<br>
-                    &quot;tone beep lower slower&quot; by pan14 (https://freesound.org/people/pan14/)<br>
-                    &quot;Woodblock&quot; by kwahmah_02 (https://freesound.org/people/kwahmah_02/)</p>
+                <p>Sounds from freesound:</p>
+                <p><a href="(https://freesound.org/people/pan14/)">&quot;tone beep lower slower&quot; by pan14</a></p>
+                <p><a href="https://freesound.org/people/kwahmah_02/">&quot;Woodblock&quot; by kwahmah_02 </a></p>
             </div>
             <div class="modal-footer">
                 <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
@@ -57,9 +68,9 @@
                 </div>
             </div>
     </footer>
-    <script src="js/materialize.js"></script>
+    <script src="/js/materialize.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.core.min.js"></script>
-    <script src="js/index.js"></script>
+    <script src="/js/index.js"></script>
 </body>
 
 </html>
