--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="manifest" href="/site.webmanifest">
     <title>No Anxiety Headphone Test | Ax Anxiety</title>
     <meta name="description" content="Test your headphone's connection without anxiety." />
+    <meta charset="utf-8"/>
 </head>
 
 <body class="grey darken-3">
