Fixed link in modal

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <p>Made with &lt;3 and sorcerous powers in Vancouver</p>
                 <p><a href="https://rikimaru55.github.io">Made by Quilo</a></p>
                 <p>Sounds from freesound:</p>
-                <p><a href="(https://freesound.org/people/pan14/)">&quot;tone beep lower slower&quot; by pan14</a></p>
+                <p><a href="https://freesound.org/people/pan14/">&quot;tone beep lower slower&quot; by pan14</a></p>
                 <p><a href="https://freesound.org/people/kwahmah_02/">&quot;Woodblock&quot; by kwahmah_02 </a></p>
             </div>
             <div class="modal-footer">
