Added google analytics

--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
     <link rel="manifest" href="/site.webmanifest">
     <title>No Anxiety Headphone Test | Ax Anxiety</title>
     <meta name="description" content="Test your headphone's connection without anxiety." />
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153838881-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-153838881-1');
+    </script>
 </head>
 
 <body class="grey darken-3">
