Added google play badge

--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
                 <p>Sounds from freesound:</p>
                 <p><a href="https://freesound.org/people/pan14/">&quot;tone beep lower slower&quot; by pan14</a></p>
                 <p><a href="https://freesound.org/people/kwahmah_02/">&quot;Woodblock&quot; by kwahmah_02 </a></p>
+                <p class="center">
+                    <a
+                        href='https://play.google.com/store/apps/details?id=com.axanxiety.app&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+                        <img alt='Get it on Google Play' width="200dpi"
+                            src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png' /></a>
+                </p>
             </div>
             <div class="modal-footer">
                 <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
